@@ -6,18 +6,14 @@ import java.util.stream.Collectors;
 
 public class day1_1 {
 
-    public static void main(String[] args) throws IOException {
-        System.out.println(getRealCode());
-    }
-
     public static Integer getRealCode() throws IOException {
         File inputFile = new File("inputs/day1_1.txt");
-        List<String> rawInputs = Files.lines(inputFile.toPath()).collect(Collectors.toList());
+        List<String> rawInputs = Files.lines(inputFile.toPath()).toList();
         List<Integer> inputs = rawInputs.stream().map(s -> {
                     s = s.replace("L", "-");
                     s = s.replace("R", "");
                     return Integer.parseInt(s);
-                }).collect(Collectors.toList());
+                }).toList();
         int code = 0;
         int currentPosition = 50;
         for (Integer input : inputs) {
